--- a/index.html
+++ b/index.html
@@ -577,6 +577,21 @@
                 <button class="callToOrder">Order</button>
             </div>
         </div>
+        <div class="container">
+            <div class="imageDiv">
+                <img src="images/water bottle.jpg" alt="The picture of water bottle">
+            </div>
+            <div class="othersDiv">
+                <h3>Bottle</h3>
+                <p>
+                    Water Bottle.
+                </p>
+                <h3>&#8358; 1000</h3>
+            </div>
+            <div class="button">
+                <button class="callToOrder">Order</button>
+            </div>
+        </div>
     </div>
 
 
