this is the new whatsapp function added to the website

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h3>&#8358; 9000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder" onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -64,7 +64,7 @@
                 <h3>&#8358; 2800</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -79,7 +79,7 @@
                 <h3>&#8358; 7000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -94,7 +94,7 @@
                 <h3>&#8358; 3500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -109,7 +109,7 @@
                 <h3>&#8358; 2500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -124,7 +124,7 @@
                 <h3>&#8358; 4000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -139,7 +139,7 @@
                 <h3>&#8358; 2000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -154,7 +154,7 @@
                 <h3>&#8358; 8500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -169,7 +169,7 @@
                 <h3>&#8358; 9000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -184,7 +184,7 @@
                 <h3>&#8358; 1500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -199,7 +199,7 @@
                 <h3>&#8358; 5000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -214,7 +214,7 @@
                 <h3>&#8358; 6000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -229,7 +229,7 @@
                 <h3>&#8358; 6000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -244,7 +244,7 @@
                 <h3>&#8358; 6000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -259,7 +259,7 @@
                 <h3>&#8358; 5000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -274,7 +274,7 @@
                 <h3>&#8358; 1500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -289,7 +289,7 @@
                 <h3>&#8358; 2000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -304,7 +304,7 @@
                 <h3>&#8358; 4500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -319,7 +319,7 @@
                 <h3>&#8358; 6000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -334,7 +334,7 @@
                 <h3>&#8358; </h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -349,7 +349,7 @@
                 <h3>&#8358; 5000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -364,7 +364,7 @@
                 <h3>&#8358; 7000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -379,7 +379,7 @@
                 <h3>&#8358; 9500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -394,7 +394,7 @@
                 <h3>&#8358; 2000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -409,7 +409,7 @@
                 <h3>&#8358; 500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -424,7 +424,7 @@
                 <h3>&#8358; </h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -439,7 +439,7 @@
                 <h3>&#8358; 2000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -454,7 +454,7 @@
                 <h3>&#8358; 19000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -469,7 +469,7 @@
                 <h3>&#8358; 7000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -484,7 +484,7 @@
                 <h3>&#8358; 7000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -499,7 +499,7 @@
                 <h3>&#8358; 8000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -514,7 +514,7 @@
                 <h3>&#8358; 2000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -529,7 +529,7 @@
                 <h3>&#8358; 2500</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -544,7 +544,7 @@
                 <h3>&#8358; 27000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -559,7 +559,7 @@
                 <h3>&#8358; 2000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -574,7 +574,7 @@
                 <h3>&#8358; 6000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
@@ -589,7 +589,7 @@
                 <h3>&#8358; 1000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder">Order</button>
+                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
     </div>
