adjusting the whatsapp call to other

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <img src="images/hand blender.jpg" alt="">
             </div>
             <div class="othersDiv">
-                <h3>Hand Blender</h3>
+                <h3 class="productName">Hand Blender</h3>
                 <p>
                     This is a smart hand blender for home use.
                 </p>
-                <h3>&#8358; 9000</h3>
+                <h3 class="productPrice">&#8358; 9000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder" onclick="redirectToWhatsApp()">Order</button>
+                <button class="callToOrder" >Order</button>
             </div>
         </div>
         <div class="container">
@@ -57,14 +57,14 @@
                 <img src="images/4-corner bowl.jpg" alt="The picture of central inverter">
             </div>
             <div class="othersDiv">
-                <h3>bowl</h3>
+                <h3 class="productName">bowl</h3>
                 <p>
                     A bowl suitable for your domestic uses.
                 </p>
-                <h3>&#8358; 2800</h3>
+                <h3 class="productPrice">&#8358; 2800</h3>
             </div>
             <div class="button">
-                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
+                <button class="callToOrder">Order</button>
             </div>
         </div>
         <div class="container">
@@ -72,14 +72,14 @@
                 <img src="images/big dustbin.jpg" alt="The picture of a medical line">
             </div>
             <div class="othersDiv">
-                <h3>Dustbin</h3>
+                <h3 class="productName">Dustbin</h3>
                 <p>
                     Make your environment clean with a spacious dustbin for commercial and domestic use   
                 </p>
-                <h3>&#8358; 7000</h3>
+                <h3 class="productPrice">&#8358; 7000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
+                <button class="callToOrder">Order</button>
             </div>
         </div>
         <div class="container">
@@ -574,7 +574,7 @@
                 <h3>&#8358; 6000</h3>
             </div>
             <div class="button">
-                <button class="callToOrder"onclick="redirectToWhatsApp()">Order</button>
+                <button class="callToOrder" onclick="redirectToWhatsApp()">Order</button>
             </div>
         </div>
         <div class="container">
